# SPILL

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  test_3d.py
checkpoints/: wild_glasses.ckpt
examples/: demo_3d.py  detect_image.py  live_demo.py  test_mobi.py
examples/data/: README.md
glassloc/: CameraVisualizer.py  GlassDetector.py  GlassInfo.py  glassloc.py
hf_space/: Dockerfile  README.md  app.py  requirements.txt
hf_space/spill/: __init__.py  monocular_3d.py  reconstruct.py  types.py
hf_space/spill/model/: backbone.py  heatmap.py  load_checkpoint.py  yolo.py
src/spill/: detect.py
src/spill/model/: detector.py
